@@ -26,6 +26,7 @@ Changed functionalities
 * Templates for printed documents need to escape inserted data (was automatic)
 * Search checkmarks 'Open/Closed' replaced by radio button 'Open/Closed/All'
 * Default exchange rates cannot be NULL
+* Don't display delete button for in-use currency or exchange rate types
 
 Bugs fixed
 * Default dates sometimes off by a day (before or after the current day) (#2587)
